tests/invalid/unsupported_expression_set/main.py
def main() -> None:
    x = {1, 2, 3}
